--- a/chisiamo.html
+++ b/chisiamo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,65 +8,68 @@
   <title>Home page</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
 
-<div class="overflow-h">
-  <!-- Navbar -->
-  <header class="header">
-    <div class="header__content">
-      <a class="header__logo" href="index.html"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt=""> </a>
-      <ul class="header__menu">
-        <li><a href="index.html" class="header__link">Home</a></li>
-        <li><a href="#" class="header__link active">Chi siamo</a></li>
-        <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
-        <li><a href="index.html#contatti"target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a></li>
-      </ul>
-      <div class="header__quick">
-        <a class="button-small" href="login.html">Accedi</a>
-        <!-- <a class="button-small" href="signUpIn.html"target="_blank" rel="noreferrer noopener">Accedi</a> -->
+  <div class="overflow-h">
+    <!-- Navbar -->
+    <header class="header">
+      <div class="header__content">
+        <a class="header__logo" href="index.html"><img src="MEDIA/company-slogan-removebg-preview.png" width="80px" alt="">
+        </a>
+        <ul class="header__menu">
+          <li><a href="index.html" class="header__link">Home</a></li>
+          <li><a href="#" class="header__link active">Chi siamo</a></li>
+          <li><a href="lavoraconnoi.html" class="header__link">Lavora con noi</a></li>
+          <li><a href="index.html#contatti" target="_blank" rel="noreferrer noopener" class="header__link">Contatti</a>
+          </li>
+        </ul>
+        <div class="header__quick">
+          <a class="button-small" href="login.html">Accedi</a>
+
           <div class="icon-hamburger menu-overlay">
             <span></span>
             <span></span>
           </div>
+        </div>
       </div>
-    </div>
-  </header>
+    </header>
 
 
-<!-- Hero -->
-  <div class="hero hero__background" id="hero__chisiamo">
-    <span></span>
-  </div>
-<!-- Team -->
-  <div class="grid grid--center pb-4" id="team">
-    <div class="col-70 text-center pt-4 pb-3 mt-2">
-      <h2>Il nostro team</h2>
-      <p>Presentazione del team</p>
+    <!-- Hero -->
+    <div class="hero hero__background" id="hero__chisiamo">
+      <span></span>
     </div>
-    <div class="col-33">
-      <div class="cover__partner round mb-2"  id="ct__1" >
-        <h3> Partner 1 </h3>
-        <p> lorem </p>
+    <!-- Team -->
+    <div class="grid grid--center pt-4  pb-4" id="team">
+      <div class="col-70 text-center pb-3 mt-2">
+        <h2>Il nostro team</h2>
+        <p>Presentazione del team</p>
       </div>
-    </div>
-    <div class="col-33">
-      <div class="cover__partner round mb-2" id="ct__2">
-        <h3> Partner 2 </h3>
-        <p> lorem </p>
+      <div class="col-33">
+        <div class="cover__partner round mb-2" id="ct__1">
+          <h3> Partner 1 </h3>
+          <p> lorem </p>
+        </div>
       </div>
-    </div>
-    <div class="col-33">
-      <div class="cover__partner round mb-2" id="ct__3">
-        <h3> Partner 3 </h3>
-        <p> lorem </p>
+      <div class="col-33">
+        <div class="cover__partner round mb-2" id="ct__2">
+          <h3> Partner 2 </h3>
+          <p> lorem </p>
+        </div>
       </div>
-      <div class="spacer"></div>
-    </div>
-    <div class="col-33">
-        <div class="cover__partner round mb-2"  id="ct__1" >
+      <div class="col-33">
+        <div class="cover__partner round mb-2" id="ct__3">
+          <h3> Partner 3 </h3>
+          <p> lorem </p>
+        </div>
+        <div class="spacer"></div>
+      </div>
+      <div class="col-33">
+        <div class="cover__partner round mb-2" id="ct__1">
           <h3> Partner 1 </h3>
           <p> lorem </p>
         </div>
@@ -82,60 +86,62 @@
           <p> lorem </p>
         </div>
       </div>
-  </div>
-  
- <!-- FOOTER -->
- <footer>
-  <span class="mt-2">Company | C.F. ABC000000000 | P.Iva 000000000 </span>
-  <br>
-  <span> <i class="fa-solid fa-location-dot"></i> &nbsp Via lorem, 123 - 12345 Città (Provincia) PAESE </span> 
-  <br>
-  <br>
-  <a href="#"> nomeazienda@dominio.it</a> <!-- href="mailto:indirizzo@email.com" -->
-  <br> 
-  <span itemprop="telephone"><a href="#">+39 123 45 67 890</a></span>
-  <div class="spacer2"></div>
-  <a target="_blank" href="#"> privacy</a> | <a target="_blank" href="#"> cookie policy</a>
-  <div class="social__cont">        
-  <ul class="social__list">
-    <li><a target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-    <li><a target="_blank" href="#"><i class="fa-brands fa-instagram"></i></a></li>
-    <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-    <li><a target="_blank" href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
-  </ul>
-  <div class="floatstop"></div>
-  </div><!--/fine social cont-->
- <div class="credits">
- <a target="_blank" href="#"><img width="150px" src="MEDIA/company-icon-removebg-full.png" title="" alt=""></a>  
-  </div>
-  <br>
-  <span id="hi">Designed by <a target="_blank" href="https://www.linkedin.com/in/valeria-parise-7a90/">Valeria Parise</a></span>
-</footer>
+    </div>
+
+    <!-- FOOTER -->
+    <footer>
+      <span class="mt-2">Company | C.F. ABC000000000 | P.Iva 000000000 </span>
+      <br>
+      <span> <i class="fa-solid fa-location-dot"></i> &nbsp Via lorem, 123 - 12345 Città (Provincia) PAESE </span>
+      <br>
+      <br>
+      <a href="#"> nomeazienda@dominio.it</a> <!-- href="mailto:indirizzo@email.com" -->
+      <br>
+      <span itemprop="telephone"><a href="#">+39 123 45 67 890</a></span>
+      <div class="spacer2"></div>
+      <a target="_blank" href="#"> privacy</a> | <a target="_blank" href="#"> cookie policy</a>
+      <div class="social__cont">
+        <ul class="social__list">
+          <li><a target="_blank" href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+          <li><a target="_blank" href="#"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a target="_blank" href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
+          <li><a target="_blank" href="#"><i class="fa-brands fa-google-plus-g"></i></a></li>
+        </ul>
+        <div class="floatstop"></div>
+      </div><!--/fine social cont-->
+      <div class="credits">
+        <a target="_blank" href="#"><img width="150px" src="MEDIA/company-icon-removebg-full.png" title="" alt=""></a>
+      </div>
+      <br>
+      <span id="hi">Designed by <a target="_blank" href="https://www.linkedin.com/in/valeria-parise-7a90/">Valeria
+          Parise</a></span>
+    </footer>
 
 
 
 
 
 
-<!-- Js per Menu -->
-<script> 
-  const menu__btn = document.querySelector('.icon-hamburger');
-  const allLink = document.querySelectorAll('.header__menu li a');
+    <!-- Js per Menu -->
+    <script>
+      const menu__btn = document.querySelector('.icon-hamburger');
+      const allLink = document.querySelectorAll('.header__menu li a');
 
-  menu__btn.addEventListener("click", function() {
-    document.body.classList.toggle('menu-open');
-  });
- 
-  allLink.forEach(item => {
-    item.addEventListener("click", function() {
-    document.body.classList.toggle('menu-open');
-  });
-    
-  });
-  
-  
- </script>
+      menu__btn.addEventListener("click", function () {
+        document.body.classList.toggle('menu-open');
+      });
+
+      allLink.forEach(item => {
+        item.addEventListener("click", function () {
+          document.body.classList.toggle('menu-open');
+        });
+
+      });
+
+
+    </script>
 
 
 </body>
+
 </html>
