--- a/lavoraconnoi.html
+++ b/lavoraconnoi.html
@@ -25,7 +25,6 @@
       </ul>
       <div class="header__quick">
         <a class="button-small" href="login.html">Accedi</a>
-        <!-- <a class="button-small" href="signUpIn.html"target="_blank" rel="noreferrer noopener">Accedi</a> -->
           <div class="icon-hamburger menu-overlay">
             <span></span>
             <span></span>
@@ -50,7 +49,7 @@
       </p>
       <a href="" class="button button__black">Scopri di più</a>
     </div>
-    <div class="col-50 p-3 relative img__project">
+    <div class="col-50 p-3 relative img__project progetti__lavoro">
       <img src="MEDIA/progetti.jpg" class="img-res img-round " id="img__project" alt="">
     </div>
   </div>
